[ADD] Add foursquare api.

--- a/course/AppliedDataScienceCapstone/lab/foursquare_api.ipynb
+++ b/course/AppliedDataScienceCapstone/lab/foursquare_api.ipynb
@@ -2,9 +2,67 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Solving environment: done\n",
+      "\n",
+      "\n",
+      "==> WARNING: A newer version of conda exists. <==\n",
+      "  current version: 4.4.10\n",
+      "  latest version: 4.6.4\n",
+      "\n",
+      "Please update conda by running\n",
+      "\n",
+      "    $ conda update -n base conda\n",
+      "\n",
+      "\n",
+      "\n",
+      "## Package Plan ##\n",
+      "\n",
+      "  environment location: /home/angryleo/anaconda3\n",
+      "\n",
+      "  added / updated specs: \n",
+      "    - geopy\n",
+      "\n",
+      "\n",
+      "The following packages will be downloaded:\n",
+      "\n",
+      "    package                    |            build\n",
+      "    ---------------------------|-----------------\n",
+      "    geopy-1.18.1               |             py_0          51 KB  conda-forge\n",
+      "    geographiclib-1.49         |             py_0          32 KB  conda-forge\n",
+      "    ------------------------------------------------------------\n",
+      "                                           Total:          84 KB\n",
+      "\n",
+      "The following NEW packages will be INSTALLED:\n",
+      "\n",
+      "    geographiclib:   1.49-py_0         conda-forge\n",
+      "    geopy:           1.18.1-py_0       conda-forge\n",
+      "\n",
+      "The following packages will be UPDATED:\n",
+      "\n",
+      "    certifi:         2018.11.29-py36_0 anaconda    --> 2018.11.29-py36_1000  conda-forge\n",
+      "    openssl:         1.0.2p-h14c3975_0 anaconda    --> 1.0.2p-h470a237_2     conda-forge\n",
+      "\n",
+      "The following packages will be DOWNGRADED:\n",
+      "\n",
+      "    ca-certificates: 2019.1.23-0       anaconda    --> 2018.11.29-ha4d7672_0 conda-forge\n",
+      "\n",
+      "\n",
+      "Downloading and Extracting Packages\n",
+      "geopy 1.18.1: ########################################################## | 100% \n",
+      "geographiclib 1.49: #################################################### | 100% \n",
+      "Preparing transaction: done\n",
+      "Verifying transaction: done\n",
+      "Executing transaction: done\n"
+     ]
+    }
+   ],
    "source": [
     "!conda install -c conda-forge geopy --yes \n",
     "# !conda install -c conda-forge folium=0.5.0 --yes\n"
@@ -12,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -22,7 +80,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-2-5188b617e7dc>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mgeopy\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgeocoders\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mNominatim\u001b[0m \u001b[0;31m# module to convert an address into latitude and longitude values\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      8\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0;31m# libraries for displaying images\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-3-5188b617e7dc>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mgeopy\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgeocoders\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mNominatim\u001b[0m \u001b[0;31m# module to convert an address into latitude and longitude values\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      8\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0;31m# libraries for displaying images\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'geopy'"
      ]
     }
