--- a/tweepy/tweet_data.py.ipynb
+++ b/tweepy/tweet_data.py.ipynb
@@ -7,219 +7,29 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import os, g"
+    "import os, glob"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>id</th>\n",
-       "      <th>tweet</th>\n",
-       "      <th>datetime</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1110567489879056384</td>\n",
-       "      <td>Match 5. 14.6: H Singh to R Pant, 6 runs, 118/...</td>\n",
-       "      <td>2019-03-26 15:41:37</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1110567429782945792</td>\n",
-       "      <td>#IPL2019 Back channel talks between Sri Lanka ...</td>\n",
-       "      <td>2019-03-26 15:41:23</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>1110567257405427712</td>\n",
-       "      <td>LISTEN IN: @navikakumar asks the legitimate qu...</td>\n",
-       "      <td>2019-03-26 15:40:42</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>1110567081945247745</td>\n",
-       "      <td>Union minister @rsprasad shown black flags at ...</td>\n",
-       "      <td>2019-03-26 15:40:00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>1110567081747972096</td>\n",
-       "      <td>‘Someone also promised 15 lakh’: @yadavakhiles...</td>\n",
-       "      <td>2019-03-26 15:40:00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>1110567046012502016</td>\n",
-       "      <td>#IndiaElects #LokSabhaElections2019\\nWatch Rag...</td>\n",
-       "      <td>2019-03-26 15:39:51</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>1110566869293891584</td>\n",
-       "      <td>TIMES NOW Super Newsbreak: Sensational admissi...</td>\n",
-       "      <td>2019-03-26 15:39:09</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>1110566786125062144</td>\n",
-       "      <td>RT @ndtvfeed: Singed In Gorakhpur, Phulpur Las...</td>\n",
-       "      <td>2019-03-26 15:38:49</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>1110566518490750977</td>\n",
-       "      <td>RT @ndtvfeed: Goa BJP Ally Says \"Conspiracy\" M...</td>\n",
-       "      <td>2019-03-26 15:37:45</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>1110566504410472449</td>\n",
-       "      <td>#IPL2019 #DCvCSK Shikhar Dhawan and Rishabh Pa...</td>\n",
-       "      <td>2019-03-26 15:37:42</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>1110566476233097216</td>\n",
-       "      <td>RT @moviesndtv: Venkatesh's Daughter Aashritha...</td>\n",
-       "      <td>2019-03-26 15:37:35</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>1110566274294120448</td>\n",
-       "      <td>RT @CricketNDTV: IPL 2019: 100 up for Delhi Ca...</td>\n",
-       "      <td>2019-03-26 15:36:47</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>1110566220263124992</td>\n",
-       "      <td>1⃣0⃣0⃣ UP FOR #DC! 👊\\n\\n@SDhawan25 is in some ...</td>\n",
-       "      <td>2019-03-26 15:36:34</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>1110566161979105281</td>\n",
-       "      <td>Feels like I'm going home: Jaya Prada on getti...</td>\n",
-       "      <td>2019-03-26 15:36:20</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>1110566097466675200</td>\n",
-       "      <td>Match 5. 13.5: DJ Bravo to S Dhawan, 4 runs, 1...</td>\n",
-       "      <td>2019-03-26 15:36:05</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15</th>\n",
-       "      <td>1110565984518066177</td>\n",
-       "      <td>#IPL2019 | @KKRiders vs @lionsdenkxip: Top 5 p...</td>\n",
-       "      <td>2019-03-26 15:35:38</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16</th>\n",
-       "      <td>1110565943644692482</td>\n",
-       "      <td>Match 5. 13.4: DJ Bravo to S Dhawan, 4 runs, 1...</td>\n",
-       "      <td>2019-03-26 15:35:28</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17</th>\n",
-       "      <td>1110565917077827584</td>\n",
-       "      <td>BHAI QUICK RUNNING! ⚡️\\n\\n@RishabPant777 and @...</td>\n",
-       "      <td>2019-03-26 15:35:22</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18</th>\n",
-       "      <td>1110565823847038976</td>\n",
-       "      <td>Watch the unmissable interview of Jaya Prada w...</td>\n",
-       "      <td>2019-03-26 15:35:00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19</th>\n",
-       "      <td>1110565563837739008</td>\n",
-       "      <td>What makes an @Russell12A keep calm through th...</td>\n",
-       "      <td>2019-03-26 15:33:58</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "                     id                                              tweet  \\\n",
-       "0   1110567489879056384  Match 5. 14.6: H Singh to R Pant, 6 runs, 118/...   \n",
-       "1   1110567429782945792  #IPL2019 Back channel talks between Sri Lanka ...   \n",
-       "2   1110567257405427712  LISTEN IN: @navikakumar asks the legitimate qu...   \n",
-       "3   1110567081945247745  Union minister @rsprasad shown black flags at ...   \n",
-       "4   1110567081747972096  ‘Someone also promised 15 lakh’: @yadavakhiles...   \n",
-       "5   1110567046012502016  #IndiaElects #LokSabhaElections2019\\nWatch Rag...   \n",
-       "6   1110566869293891584  TIMES NOW Super Newsbreak: Sensational admissi...   \n",
-       "7   1110566786125062144  RT @ndtvfeed: Singed In Gorakhpur, Phulpur Las...   \n",
-       "8   1110566518490750977  RT @ndtvfeed: Goa BJP Ally Says \"Conspiracy\" M...   \n",
-       "9   1110566504410472449  #IPL2019 #DCvCSK Shikhar Dhawan and Rishabh Pa...   \n",
-       "10  1110566476233097216  RT @moviesndtv: Venkatesh's Daughter Aashritha...   \n",
-       "11  1110566274294120448  RT @CricketNDTV: IPL 2019: 100 up for Delhi Ca...   \n",
-       "12  1110566220263124992  1⃣0⃣0⃣ UP FOR #DC! 👊\\n\\n@SDhawan25 is in some ...   \n",
-       "13  1110566161979105281  Feels like I'm going home: Jaya Prada on getti...   \n",
-       "14  1110566097466675200  Match 5. 13.5: DJ Bravo to S Dhawan, 4 runs, 1...   \n",
-       "15  1110565984518066177  #IPL2019 | @KKRiders vs @lionsdenkxip: Top 5 p...   \n",
-       "16  1110565943644692482  Match 5. 13.4: DJ Bravo to S Dhawan, 4 runs, 1...   \n",
-       "17  1110565917077827584  BHAI QUICK RUNNING! ⚡️\\n\\n@RishabPant777 and @...   \n",
-       "18  1110565823847038976  Watch the unmissable interview of Jaya Prada w...   \n",
-       "19  1110565563837739008  What makes an @Russell12A keep calm through th...   \n",
-       "\n",
-       "               datetime  \n",
-       "0   2019-03-26 15:41:37  \n",
-       "1   2019-03-26 15:41:23  \n",
-       "2   2019-03-26 15:40:42  \n",
-       "3   2019-03-26 15:40:00  \n",
-       "4   2019-03-26 15:40:00  \n",
-       "5   2019-03-26 15:39:51  \n",
-       "6   2019-03-26 15:39:09  \n",
-       "7   2019-03-26 15:38:49  \n",
-       "8   2019-03-26 15:37:45  \n",
-       "9   2019-03-26 15:37:42  \n",
-       "10  2019-03-26 15:37:35  \n",
-       "11  2019-03-26 15:36:47  \n",
-       "12  2019-03-26 15:36:34  \n",
-       "13  2019-03-26 15:36:20  \n",
-       "14  2019-03-26 15:36:05  \n",
-       "15  2019-03-26 15:35:38  \n",
-       "16  2019-03-26 15:35:28  \n",
-       "17  2019-03-26 15:35:22  \n",
-       "18  2019-03-26 15:35:00  \n",
-       "19  2019-03-26 15:33:58  "
+       "(3041, 3)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = pd.read_csv('data1553614945.csv')\n",
-    "df"
+    "path = '/opt/datascience/tweepy/data'\n",
+    "df = pd.concat(map(pd.read_csv, glob.glob(os.path.join(path, \"data*.csv\"))))\n",
+    "df.shape"
    ]
   },
   {
